--- a/index.html
+++ b/index.html
@@ -1,170 +1,178 @@
 <!DOCTYPE html>
-<html lang="ru">
-
+<html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="preconnect" href="https://fonts.googleapis.com">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&family=Tenor+Sans&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="css/normalize.css">
-	<link rel="stylesheet" href="css/style.css">
-	<title>Furniture to order</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Document</title>
 </head>
-
 <body>
-	<header class="header">
-		<nav class="header__nav">
-			<ul class="header__nav__list">
-				<li><a class="header__nav__link" href="master.html">Мастер-классы</a></li>
-				<li><a class="header__nav__link" href="index.html">Мебель на заказ</a></li>
-				<li class="logo"><img src="img/logo.svg" alt="logo"></li>
-				<li><a class="header__nav__link" href="prototype.html">Контакты</a></li>
-				<li><a class="header__nav__link" href="about.html">О нас</a></li>
-			</ul>			
-		</nav>
-	</header>
+    <header class="header">
+        <nav class="header__nav">
+            <ul class="header__nav__list">
+                <li><a class="header__nav__link" href="">Главная</a></li>
+                <li><a class="header__nav__link" href="">Категории</a></li>
+                <li class="logo"><img src="img/logo.svg" alt=""></li>
+                <li><a class="header__nav__link" href="">Акции</a></li>
+                <li><a class="header__nav__link" href="">Контакты</a></li>
+                <li class="cart"><img src="img/Cart.svg" alt=""></li>
+            </ul>
+        </nav>
+    </header>
 
-	<main>
-		<section class="custom_furniture">
-			<div class="custom_furniture_title">
-				<p class="custom_furniture_slogan">Воплотим вашу любую задумку в реальность</p>
-			    <h1>Столярная мастерская</h1>
-			    <h2 class="custom_furniture_text">NIKASON BRAND</h2>
-			</div>
-			<button>Заказать мебель</button>
-		</section> 
-
-		<section class="advantages">
-			<h2>Почему выбирают нас</h2>	
-				<div class="advantages_cards">
-					<div class="advantages_card">
-						<div>
-							<p class="advantages_title">Давно на рынке</p>
-							<p>Опыт работы на рынке <br> больше 10 лет</p>
-						</div>
-						<div>
-							<p class="advantages_title">Экологичность</p>
-							<p>Мебель из натуральной древесины, <br> краски без токсичного состава</p>
-						</div>
-					</div>
-					<div class="advantages_card">
-						<div>
-							<p class="advantages_title">Гарантия качества</p>
-							<p>Предоставляем гарантию <br> 12 месяцев на изделия</p>
-						</div>
-						<div>
-							<p class="advantages_title">Эксклюзивность</p>
-							<p>Каждая мебель изготовлена по <br> индивидуальному дизайну</p>
-						</div>
-					</div>
-					<div class="advantages_card">
-						<div>
-							<p class="advantages_title">Юридическая прозрачность</p>
-							<p>Заключаем с каждым клиентом <br> договор</p>
-						</div>
-						<div>
-							<p class="advantages_title">Долговечность</p>
-							<p>Мебель из массива дерева <br> прослужит даже вашим детям</p>
-						</div>
-					</div>
-				</div>
-		</section>
-
-		<section>
-			<h2 class="portfolio_title">Портфолио</h2>
-			<div class="portfolio">
-				<img src="img/portfolio_1.jpg" alt="portfolio_1">								
-			<div class="portfolio_gallery">
-				<img src="img/arrow-left.svg" alt="arrow-left">
-				<img src="img/portfolio_2.jpg" alt="portfolio_2">
-				<img src="img/portfolio_3.jpg" alt="portfolio_3">
-				<img src="img/portfolio_4.jpg" alt="portfolio_4">
-				<img src="img/portfolio_5.jpg" alt="portfolio_5">
-				<img src="img/portfolio_6.jpg" alt="portfolio_6">
-				<img src="img/portfolio_7.jpg" alt="portfolio_7">
-				<img src="img/portfolio_8.jpg" alt="portfolio_8">
-				<img src="img/arrow-right.svg" alt="arrow-right">
-			</div>
-			</div>
-		</section>
-
-		<section class="stages">
-			<h2 class="stages_title">Этапы производства</h2>
-			<div class="stages_table">
-				<div class="stages_table_row">
-					<div class="stages_table_item">
-						<h2 class="stages_numeration">1</h2>
-						<p class="stages_text">Встреча с клиентом</p>
-					</div>
-					<div class="stages_table_item">
-						<h2 class="stages_numeration">2</h2>
-						<p class="stages_text">Подписание договора, <br> внесение предоплаты</p>	
-					</div>
-					<div class="stages_table_item">
-						<h2 class="stages_numeration">3</h2>
-						<p class="stages_text">Выезд к клиенту на замер <br> (при необходимости)</p>	
-					</div>
-				</div>
-				<div class="stages_table_row">
-					<div class="stages_table_item">
-						<h2 class="stages_numeration">4</h2>
-						<p class="stages_text">Составление проекта</p>	
-					</div>
-					<div class="stages_table_item">
-						<h2 class="stages_numeration">5</h2>
-						<p class="stages_text">Изготовление и согласование <br> всех стадий с клиентом</p>
-					</div>
-					<div class="stages_table_item">
-						<h2 class="stages_numeration">6</h2>
-						<p class="stages_text">Доставка и монтаж изделия <br> (при необходимости)</p>
-					</div>
-				</div>
-			</div>
-		</section>
-
-		<section class="about">
-			<h2 class="about_title">Клиенты о нас</h2>
-			<div class="about_images">
-				<img src="img/review_1.jpg" alt="review_1">
-				<img src="img/review_2.jpg" alt="review_2">
-				<img src="img/review_3.jpg" alt="review_3">
-				<img src="img/review_4.jpg" alt="review_4">
-				<img src="img/review_5.jpg" alt="review_5">
-			</div>			
-		</section>
-        
-        <section class="application">
-            <h2>Оставьте заявку и мы с вами свяжемся</h2>
-			<button class="application_button">Оставить заявку</button>
+    <main>
+        <section class="cards_products">
+            <h1>Наши товары</h1>
+            <div class="cards">
+            <div class="card">
+                <img src="img/eggs.png" alt="">
+                <p>Яйца</p>
+                <p>Simply dummy text of the printing and typesetting industry. <br>Lorem had ceased to been the industry's standard  the 1500s, when an unknown</p>
+                <p>$9.00</p>
+            </div>  
+            <div class="card">
+                <img src="img/beans.png" alt="">
+                <p>Фасоль</p>
+                <p>Simply dummy text of the printing and typesetting industry. <br>Lorem had ceased to been the industry's standard  the 1500s, when an unknown</p>
+                <p>$13.00</p>
+            </div>
+            <div class="card">
+                <img src="img/bred.png" alt="">
+                <p>Хлеб</p>
+                <p>Simply dummy text of the printing and typesetting industry. <br>Lorem had ceased to been the industry's standard  the 1500s, when an unknown</p>
+                <p>$10.00</p>
+            </div>
+            <div class="card">
+                <img src="img/broccoli.png" alt="">
+                <p>Брокколи</p>
+                <p>Simply dummy text of the printing and typesetting industry. <br>Lorem had ceased to been the industry's standard  the 1500s, when an unknown</p>
+                <p>$25.00</p>
+            </div>
+            </div>
+            <div class="cards">
+                <div class="card">
+                <img src="img/corn.png" alt="">
+                <p>Кукуруза</p>
+                <p>Simply dummy text of the printing and typesetting industry. <br>Lorem had ceased to been the industry's standard  the 1500s, when an unknown</p>
+                <p>$17.00</p>
+            </div>
+            <div class="card">
+                <img src="img/banana.png" alt="">
+                <p>Бананы</p>
+                <p>Simply dummy text of the printing and typesetting industry. <br>Lorem had ceased to been the industry's standard  the 1500s, when an unknown</p>
+                <p>$11.00</p>  
+            </div>
+            <div class="card">
+                <img src="img/nut.png" alt="">
+                <p>Фисташки</p>
+                <p>Simply dummy text of the printing and typesetting industry. <br>Lorem had ceased to been the industry's standard  the 1500s, when an unknown</p>
+                <p>$14.00</p>
+            </div>
+            <div class="card">
+                <img src="img/tomato.png" alt="">
+                <p>Помидор</p>
+                <p>Simply dummy text of the printing and typesetting industry. <br>Lorem had ceased to been the industry's standard  the 1500s, when an unknown</p>
+                <p>$13.00</p>
+            </div></div>
         </section>
-	</main>
-	
-    <footer class="footer">
-		<nav class="footer__nav">
-			<ul class="footer__nav__list">
-				<li class="footer__nav__item">
-					<p>ИП Колодезников-Матчитов Н.И.</p>
-			        <p>ИНН 143515646663</p>
-				</li>
-			</ul>
-			<ul class="footer__nav__list">
-				<li><a class="footer__nav__item" href="master.html">Мастер-классы</a></li>
-				<li><a class="footer__nav__item" href="index.html">Мебель на заказ</a></li>
-			</ul>
-			<ul class="footer__nav__list">
-				<li><a class="footer__nav__item" href="prototype.html">Контакты</a></li>
-				<li><a class="footer__nav__item" href="about.html">О нас</a></li>
-			</ul>
-			<ul class="footer__nav__list">		
-				<li><a class="footer__nav__item" href="">Политика кофиденциальности</a></li>
-				<li><a class="footer__nav__item" href="">Договор оферты</a></li>
-			</ul>
-			<div class="footer_social_networks"> 													
-				<a href=""><img src="img/instagram.svg" alt="instagram"></a>
-				<a href=""><img src="img/whatsapp.svg" alt="whatsapp"></a>			
-		    </div>
-		</nav>		
-	</footer>
+        <section class="promotion">
+            <h2>Акции дня</h2>
+            <div class="promotion_card">
+                <img src="img/promotion_1.png" alt="">
+                <div class="promotion_text">
+                    <p>Акция 1</p>
+                    <p>Simply dummy text of the printing and typesetting industry. Lorem Ipsum <br> 
+                        Established fact that a reader will be distracted by the readable content of a page when looking a layout. <br> 
+                        The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed 
+                    </p>
+                </div>
+            </div>
+            <div class="promotion_card">
+                <img src="img/promotion_2.png" alt="">
+                <div class="promotion_text">
+                    <p>Акция 2</p>
+                    <p>Simply dummy text of the printing and typesetting industry. Lorem Ipsum <br> 
+                        Established fact that a reader will be distracted by the readable content of a page when looking a layout. <br> 
+                        The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed 
+                    </p>
+                </div>
+            </div>
+            <div class="promotion_card">
+                <img src="img/promotion_3.png" alt="">
+                <div class="promotion_text">
+                    <p>Акция 3</p>
+                    <p>Simply dummy text of the printing and typesetting industry. Lorem Ipsum <br> 
+                        Established fact that a reader will be distracted by the readable content of a page when looking a layout. <br>  
+                        The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed 
+                    </p>
+                </div>
+            </div>
+            <div class="promotion_card">
+                <img src="img/promotion_4.png" alt="">
+                <div class="promotion_text">
+                    <p>Акция 4</p>
+                    <p>Simply dummy text of the printing and typesetting industry. Lorem Ipsum <br> 
+                        Established fact that a reader will be distracted by the readable content of a page when looking a layout. <br>  
+                        The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed 
+                    </p>
+                </div>
+            </div>
+            <div class="promotion_card">
+                <img src="img/promotion_5.png" alt="">
+                <div class="promotion_text">
+                    <p>Акция 5</p>
+                    <p>Simply dummy text of the printing and typesetting industry. Lorem Ipsum <br> 
+                        Established fact that a reader will be distracted by the readable content of a page when looking a layout.<br> 
+                        The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed 
+                    </p>
+                </div>
+            </div>
+            <div class="promotion_card">
+                <img src="img/promotion_6.png" alt="">
+                <div class="promotion_text">
+                    <p>Акция 6</p>
+                    <p>Simply dummy text of the printing and typesetting industry. Lorem Ipsum <br> 
+                        Established fact that a reader will be distracted by the readable content of a page when looking a layout. <br>  
+                        The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed 
+                    </p>
+                </div>
+            </div>
+        </section>
+
+        <section class="gallery_employee">
+            <h2 class="gallery_title">Портфолио</h2>
+			<div class="gallery">
+				<div class="full_photo">
+					<img src="img/gallery_1.jpg" alt="portfolio_2">	
+				</div>
+				<div class="gallery_small">
+					<span class="left_btn" href="#">&#x2039;</span>
+					<img class="small_photo" src="img/gallery_2.jpg" alt="portfolio_3">
+					<img class="small_photo" src="img/gallery_3.jpg" alt="portfolio_4">
+					<img class="small_photo" src="img/gallery_4.jpg" alt="portfolio_5">
+					<img class="small_photo" src="img/gallery_5.png" alt="portfolio_6">
+					<img class="small_photo" src="img/gallery_6.png" alt="portfolio_7">
+					<span class="right_btn" href="#">&#x203A;</span>
+				</div>
+			</div>
+        </section>
+
+        <footer class="footer">
+            <nav class="footer__nav">
+                <p>Address: 88 road, borklyn street, USA</p>
+                <p>Phone: 666 888 888</p>
+                <div class="footer_social_networks">
+                    <img src="img/soc_net_1.svg" alt="">
+                    <img src="img/soc_net_2.svg" alt="">
+                    <img src="img/soc_net_3.svg" alt=""> 
+                </div>        
+            </nav>
+        </footer>
+    </main>
+    <script src="script.js"></script>
 </body>
 </html>
